@@ -216,22 +216,6 @@ public class ClassUtilTest extends DatabindTestUtil
         assertEquals(TestEnum.class, ClassUtil.findEnumType(TestEnum.B));
     }
 
-    // Some trouble with JDK 17+ (unless --add-opens to force access added)
-    @Test
-    public void testFindEnumSetTypeJDK()
-    {
-        // different codepaths for empty and non-empty EnumSets...
-        assertEquals(TestEnum.class, ClassUtil.findEnumType(EnumSet.allOf(TestEnum.class)));
-        assertEquals(TestEnum.class, ClassUtil.findEnumType(EnumSet.noneOf(TestEnum.class)));
-    }
-
-    // Some trouble with JDK 17+ (unless --add-opens to force access added)
-    @Test
-    public void testFindEnumMapTypeJDK()
-    {
-        assertEquals(TestEnum.class, ClassUtil.findEnumType(new EnumMap<TestEnum,Integer>(TestEnum.class)));
-    }
-
     @Test
     public void testDescs()
     {
